--- a/templates/front/devis/set_password.html.twig
+++ b/templates/front/devis/set_password.html.twig
@@ -13,6 +13,7 @@
             <div class="col-lg-6 col-md-6 text-center">
                 <h1 class="display-4 fw-bold lh-1 text-body-emphasis mb-3">Définissez votre mot de passe</h1>
                 <p class="col-lg-10 fs-4">Veuillez définir un mot de passe pour le suivi de votre demande de devis.</p>
+                <img src="{{ asset('img/keep_it_simple.png') }}" alt="ScriptZenIT">
             </div>
             <div class="col-md-6 mx-auto col-lg-5">
                 {{ form_start(form) }}
