--- a/templates/front/ticket/home.html.twig
+++ b/templates/front/ticket/home.html.twig
@@ -15,7 +15,7 @@
 		<div class="row">
 			<div class="col-lg-3">
 				<h3>Mes devis</h3>
-				<a href="https://support.scriptzenit.frr" class="btn btn-secondary">Support en ligne</a>
+				<a href="{{ url('front_blog') }}" class="btn btn-secondary">Support en ligne</a>
 				<!-- Account Sidebar-->
 				<div class="wizard">
 					<nav class="list-group list-group-flush">
