--- a/templates/security/email.html.twig
+++ b/templates/security/email.html.twig
@@ -168,7 +168,7 @@
                                                         <a href="https://scriptzenit.fr/realisations" target="_blank" class="v-button" style="box-sizing: border-box;display: inline-block;font-family:'Lato',sans-serif;text-decoration: none;-webkit-text-size-adjust: none;text-align: center;color: #0075a3; background-color: #fff200; border-radius: 0px;-webkit-border-radius: 0px; -moz-border-radius: 0px; width:auto; max-width:100%; overflow-wrap: break-word; word-break: break-word; word-wrap:break-word; mso-border-alt: none;font-size: 14px;">
 																	<span style="display:block;padding:10px 20px;line-height:120%;">
 																		<strong>
-																			<span style="line-height: 16.8px;">VOIR CE QUE JE PROPOSE
+																			<span style="line-height: 16.8px;">VOIR NOS REALISATIONS
 																			</span>
 																		</strong>
 																	</span>
