--- a/public/css/front/css/app.css
+++ b/public/css/front/css/app.css
@@ -257,3 +257,37 @@
     }
     
 }
+
+
+.block-hidden-resources {
+    height: 40vh;
+    overflow: hidden;
+}
+.overflow-style-1 {
+    overflow: auto !important;
+    height: 100%;
+    padding: 0 10px 10px 10px;
+    border: solid 1px grey;
+    border-radius: 6px;
+}
+.overflow-style-1::-webkit-scrollbar {
+    width: 5px;
+}
+.overflow-style-1::-webkit-scrollbar-thumb {
+    background-color: #888787;
+    border-radius: 5px;
+}
+.overflow-style-1::-webkit-scrollbar-track {
+    background-color: #f1f1f1;
+}
+.overflow-style-1:hover::-webkit-scrollbar {
+    width: 5px;
+    opacity: 1;
+}
+
+.block-profil-informations {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
