--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -97,6 +97,7 @@
 
 			<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 			<script src="{{ asset('assets/js/user.js') }}"></script>
+			<script src="{{ asset('js/resource.js') }}"></script>
 
 
 			{#  <script src="{{ asset('js/particles.js')}}"></script>#}
