--- a/templates/front/ticket/email.html.twig
+++ b/templates/front/ticket/email.html.twig
@@ -182,7 +182,8 @@
                                                         <a href="https://scriptzenit.fr/realisations" target="_blank" class="v-button" style="box-sizing: border-box;display: inline-block;font-family:'Lato',sans-serif;text-decoration: none;-webkit-text-size-adjust: none;text-align: center;color: #0075a3; background-color: #fff200; border-radius: 0px;-webkit-border-radius: 0px; -moz-border-radius: 0px; width:auto; max-width:100%; overflow-wrap: break-word; word-break: break-word; word-wrap:break-word; mso-border-alt: none;font-size: 14px;">
 																	<span style="display:block;padding:10px 20px;line-height:120%;">
 																		<strong>
-																			<span style="line-height: 16.8px;">VOIR CE QUE JE PROPOSE
+																			<span style="line-height: 16.8px;">
+                                                                                VOIR NOS REALISATIONS
 																			</span>
 																		</strong>
 																	</span>
@@ -231,7 +232,7 @@
                                                         </div>
                                                         <div style="font-family: arial, helvetica, sans-serif;">&nbsp;</div>
                                                         <div style="font-family: arial, helvetica, sans-serif;">
-																	<span style="font-size: 12px; color: #999999; line-height: 14.4px;">Je reviens vers vous dans 48h/72h maximum, vérifiez votre adresse email, passé ce délai, veuillez me contacter.<a href="mailto:wbelbeche.s@gmail.com">Clickez ici</a>
+																	<span style="font-size: 12px; color: #999999; line-height: 14.4px;">Nous revenons vers vous dans 48h/72h maximum, vérifiez votre adresse email, passé ce délai, veuillez nous contacter.<a href="mailto:contact@scriptzenit.fr">contact@scriptzenit.fr</a>
 																	</span>
                                                         </div>
                                                     </div>
