--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -12,61 +12,82 @@
 			{% endfor %}
 		{% endfor %}
 	</div>
-	
-	<div class="container col-xl-10 col-xxl-8 px-4 py-5">
-		<div class="row align-items-center g-lg-5 py-5">
-			<div class="col-lg-7 text-center text-lg-start">
-				<div class="d-none d-md-flex col-md-4 col-lg-6 bg-primary"></div>
-				<h1 class="display-4 fw-bold lh-1 mb-3">Heureux de vous revoir !</h1>
-				<div class="register">
-					<h6>Vous n'êtes pas membre ?</h6>
-					<p>Inscrivez-vous en suivant ce lien <a href="{{ url('app_register') }}">Je m'inscris</a>.</p>
+
+	{% if app.user %}
+
+		<div class="px-4 pt-5 my-5 text-center border-bottom">
+			<h1 class="display-4 fw-bold text-body-emphasis">Oups, vous êtes déjà connecté !</h1>
+			<div class="col-lg-6 mx-auto">
+				<p class="lead mb-4">En tant que {{ app.user.userIdentifier }},
+				<div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
+					<a href="{{ path('app_logout') }}" class="btn btn-primary btn-lg px-4 me-sm-3">Déconnexion</a>
+					<a href="{{ path('front_project') }}" class="btn btn-primary btn-lg px-4 me-sm-3">Voir nos réalisations</a>
 				</div>
 			</div>
-			<div class="col-md-10 mx-auto col-lg-5">
-				<form class="p-4 p-md-5 border rounded-3" method="post" action="{{ url('app_login')}}">
-					<div class="form-group mb-3">
-						<label for="floatingInput">E-mail</label>
-						<input type="email" class="form-control" value="{{ last_username }}" id="floatingInput" placeholder="L'adresse saisie pour l'inscription" name="email">
-					</div>
-					<div class="form-group mb-3">
-						<label for="floatingPassword">Mot de passe</label>
-						<input type="password" class="form-control" id="floatingPassword" placeholder="Mot de passe" name="password">
-					</div>
-					<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-					{% if error %}
-						<div class="alert alert-danger">Identifiant ou mot de passe incorect.</div>
-					{% endif %}
-					<div class="flex items-center justify-between forgot-password mb-3">
-						<h3><strong>Vous avez du mal à vous connecter ?</strong></h3>
-						<div class="text-sm">
-							<a href="{{ url('request_reset_password') }}" class="font-medium text-indigo-600 hover:text-indigo-500">J'ai oublié mon mot de passe.</a>
-						</div>
-					</div>
-					<div class="checkbox mb-3">
-						<label>
-							<input type="checkbox" name="_remember_me">
-							Se souvenir de moi
-						</label>
-					</div>
-					<button class="w-100 btn btn-lg btn-primary" type="submit">
-						Me connecter
-					</button>
-					<hr class="my-4">
-					<div class="d-grid mb-2">
-						<button class="btn btn-google btn-login text-uppercase fw-bold" type="submit">
-						<i class="fab fa-google me-2"></i> Sign in with Google
-						</button>
-					</div>
-					<div class="d-grid">
-						<button class="btn btn-facebook btn-login text-uppercase fw-bold" type="submit">
-						<i class="fab fa-facebook-f me-2"></i> Sign in with Facebook
-						</button>
-					</div>
-				</form>
+			<div class="overflow-hidden" style="max-height: 30vh;">
 			</div>
 		</div>
-	</div>
 
+	{% else %}
+	
+		<div class="container col-xl-10 col-xxl-8 px-4 py-5">
+			<div class="row align-items-center g-lg-5 py-5">
+				<div class="col-lg-7 text-center text-lg-start">
+					<div class="d-none d-md-flex col-md-4 col-lg-6 bg-primary"></div>
+					<h1 class="display-4 fw-bold lh-1 mb-3">Heureux de vous revoir !</h1>
+					<div class="register">
+						<h6>Vous n'êtes pas membre ?</h6>
+						<p>Inscrivez-vous en suivant ce lien <a href="{{ url('app_register') }}">Je m'inscris</a>.</p>
+						<div class="container d-flex justify-content-center">
+							<img src="{{ asset('img/login.png') }}" alt="Connexion ScriptZenIT" width="70%" height="70%">
+						</div>
+					</div>
+				</div>
+				<div class="col-md-10 mx-auto col-lg-5">
+					<form class="p-4 p-md-5 border rounded-3" method="post" action="{{ url('app_login')}}">
+						<div class="form-group mb-3">
+							<label for="floatingInput">E-mail</label>
+							<input type="email" class="form-control" value="{{ last_username }}" id="floatingInput" placeholder="L'adresse saisie pour l'inscription" name="email">
+						</div>
+						<div class="form-group mb-3">
+							<label for="floatingPassword">Mot de passe</label>
+							<input type="password" class="form-control" id="floatingPassword" placeholder="Mot de passe" name="password">
+						</div>
+						<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+						{% if error %}
+							<div class="alert alert-danger">Identifiant ou mot de passe incorect.</div>
+						{% endif %}
+						<div class="flex items-center justify-between forgot-password mb-3">
+							<h3><strong>Vous avez du mal à vous connecter ?</strong></h3>
+							<div class="text-sm">
+								<a href="{{ url('request_reset_password') }}" class="font-medium text-indigo-600 hover:text-indigo-500">J'ai oublié mon mot de passe.</a>
+							</div>
+						</div>
+						<div class="checkbox mb-3">
+							<label>
+								<input type="checkbox" name="_remember_me">
+								Se souvenir de moi
+							</label>
+						</div>
+						<button class="w-100 btn btn-lg btn-primary" type="submit">
+							Me connecter
+						</button>
+						<hr class="my-4">
+						<div class="d-grid mb-2">
+							<button class="btn btn-google btn-login text-uppercase fw-bold" type="submit">
+							<i class="fab fa-google me-2"></i> Google
+							</button>
+						</div>
+						<div class="d-grid">
+							<button class="btn btn-facebook btn-login text-uppercase fw-bold" type="submit">
+							<i class="fab fa-facebook-f me-2"></i> Facebook
+							</button>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+
+	{% endif %}
 
 {% endblock %}
