wip: fixed subject assistance open

--- a/templates/front/subject/index.html.twig
+++ b/templates/front/subject/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block content_support %}
+{% block content %}
 
 	<div class="jumbotron bg-primary">
 		<h3 class="lead text-white text-center">Centre Access</h3>
