--- a/templates/front/subject/new.html.twig
+++ b/templates/front/subject/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block content_support %}
+{% block content %}
 
     <script src="https://cdn.ckeditor.com/ckeditor5/36.0.1/classic/ckeditor.js"></script>
 
