--- a/templates/front/ticket/home.html.twig
+++ b/templates/front/ticket/home.html.twig
@@ -15,7 +15,7 @@
 		<div class="row">
 			<div class="col-lg-3">
 				<h3>Mes devis</h3>
-				<a href="{{ url('front_support') }}" class="btn btn-secondary">Mes sujets</a>
+				<a href="{{ url('front_support') }}" class="btn btn-secondary">Centre d'Assistance</a>
 				<a href="{{ url('front_profile_project') }}" class="btn btn-info">Mes projets</a>
 				<!-- Account Sidebar-->
 				<div class="wizard">
