fixed project upload + edit

--- a/templates/front/profil/edit.html.twig
+++ b/templates/front/profil/edit.html.twig
@@ -12,7 +12,7 @@
 
                 <div class="page-title-content">
                     <div class="d-flex align-items-center">
-                        <img src="{% if app.user %}{{ asset('img/support/'~app.user.avatar) }} {% else %} {{ asset('img/support/support0.svg') }} {% endif %}" width="35" height="35" class="rounded-circle me-3 border border-width-3 border-white" alt="{{ app.user.username }}" width="120" height="120">
+                        <img src="{% if app.user %}{{ asset('uploads/avatar/'~app.user.avatar) }} {% else %} {{ asset('uploads/avatar/support0.svg') }} {% endif %}" width="35" height="35" class="rounded-circle me-3 border border-width-3 border-white" alt="{{ app.user.username }}" width="120" height="120">
                         <div>
                             <h2 class="h1 border-bottom border-dark border-width-4" style="font-weight: 800;color:white;">Profil de {{ app.user.prenom }}</h2>
                             <p class="mb-0 text-white-50">Rôle du forum : <strong>{% for role in app.user.roles %}{{ role }}{% if not loop.last %}, {% endif %}{% endfor %}</strong></p>
@@ -37,6 +37,13 @@
 
         {{ form_start(form) }}
 
+        <div class="form-group">
+            <!-- Champ Civilité -->
+            {{ form_label(form.civility) }}
+            {{ form_widget(form.civility) }}
+            {{ form_errors(form.civility) }}
+        </div>
+
         <!-- Champ Nom -->
         <div class="form-group">
             {{ form_label(form.nom) }}
@@ -50,11 +57,6 @@
             {{ form_widget(form.prenom, {'attr': {'class': 'form-control'}}) }}
             {{ form_errors(form.prenom) }}
         </div>
-
-        <!-- Champ Civilité -->
-        {{ form_label(form.civility) }}
-        {{ form_widget(form.civility) }}
-        {{ form_errors(form.civility) }}
 
         <!-- Champ Email -->
         <div class="form-group">
@@ -77,7 +79,6 @@
             {{ form_errors(form.password.first) }}
         </div>
 
-        <!-- Champ Confirmation du mot de passe -->
         <div class="form-group">
             {{ form_label(form.password.second) }}
             {{ form_widget(form.password.second, {'attr': {'class': 'form-control'}}) }}
