--- a/templates/back/article/edit.html.twig
+++ b/templates/back/article/edit.html.twig
@@ -2,14 +2,14 @@
 
 {% block content %}
     <div class="container mt-4">
-        <h1>Modifier l'article ou publier l'article {{ article.slug }}</h1>
+        <h1>Modifier l'article ou publier l'article {{ article.title }}</h1>
 
-        <a href="{{ url('back_articles_publish', {slug: article.slug}) }}" class="btn btn-success">
+        <a href="{{ url('back_articles_publish', {title: article.title}) }}" class="btn btn-success">
             <i class="bi bi-send-plus-fill"></i>
             Publier l'article !
         </a>
 
-        <a href="{{ url('back_articles_remove', {slug: article.slug}) }}" class="btn btn-danger">
+        <a href="{{ url('back_articles_remove', {title: article.title}) }}" class="btn btn-danger">
             <i class="bi bi-file-earmark-minus"></i>
             Supprimer l'article !
         </a>
@@ -19,11 +19,11 @@
         {% if app.request.attributes.get('_route') == 'back_articles_edit' %}
 
             <h2>Gestion des images</h2>
-            {% for image in article.images %}
+            {#{% for image in article.images %}
                 <div>
                     <img src="{{ asset('/uploads/'~image.name) }}" alt="{{ image.name }}" width="150">
 
-                    {# We add a link to delete an image (will be managed in Ajax in images.js) #}
+                     We add a link to delete an image (will be managed in Ajax in images.js)
 
                     <a href="{{ path('back_articles_remove_image', {name: image.name})}}" data-delete data-token="{{ csrf_token('delete' ~image.name )}}">
                         <i class="bi bi-file-earmark-x"></i>
@@ -31,7 +31,7 @@
                     </a>
 
                 </div>
-            {% endfor %}
+            {% endfor %}#}
         {% endif %}
         <br>
         {% include 'back/includes/_article_form.html.twig' %}
