--- a/templates/back/includes/nav.html.twig
+++ b/templates/back/includes/nav.html.twig
@@ -1,5 +1,5 @@
 <!-- Header -->
-<header id="site_header" class="header" style="margin-top: 6rem !important;">
+<header id="site_header" class="header top-fixed">
 	<div
 		class="header-content clearfix">
 
@@ -34,6 +34,14 @@
 				</li>
 				<li class="menu-item">
 					<a href="{{ url('back_ticket') }}">Voir ticket</a>
+				</li>
+
+				<li class="menu-item">
+					<a href="{{ url('back_home_support') }}">Voir l'admin support</a>
+				</li>
+
+				<li class="menu-item">
+					<a href="{{ url('back_articles_list') }}">Article support</a>
 				</li>
 
 				<li class="menu-item">
