--- a/templates/front/favorites/show.html.twig
+++ b/templates/front/favorites/show.html.twig
@@ -13,7 +13,7 @@
 					<div class="col-lg-3 col-md-3 col-sm-10">
 						<div class="single-blog blog-style-one">
 							<div class="blog-image">
-								<a href="{{ path('front_articles_show', {'slug': article.slug}) }}">
+								<a href="{{ path('front_articles_show', {'title': article.title}) }}">
 									{% for image in article.images %}
 										<img class="card-img-top rounded-0" src="{{ asset('uploads/' ~ image.name) }}" alt="{{ article.title }}">
 									{% endfor %}
@@ -26,7 +26,7 @@
 							</div>
 							<div class="blog-content">
 								<h5 class="blog-title">
-									<a href="{{ path('front_articles_show', {'slug': article.slug}) }}">
+									<a href="{{ path('front_articles_show', {'title': article.title}) }}">
 										<h5 class="card-title">{{ article.title }}</h5>
 									</a>
 								</h5>
