--- a/templates/front/home/index.html.twig
+++ b/templates/front/home/index.html.twig
@@ -14,11 +14,11 @@
 		</div>
 
 		{# hero home page #}
-		<section id="slider" class="slider-element bg-home-image" style="color: var(--cnvs-bg-overlay-bg) !important;height: 100vh;">
+		<section id="slider" class="slider-element bg-home-image pt-5" style="color: var(--cnvs-bg-overlay-bg) !important;height: 100vh;">
 			<div class="container">
 				<div class="row align-items-md-end">
-					<div class="col-lg-5 align-self-center flex-column py-6">
-						<div class="col-12 col-md-12 col-lg-12 rounded pt-5 pb-5 block_information_home border-circle">
+					<div class="col-lg-5 align-self-center flex-column">
+						<div class="col-12 col-md-12 col-lg-12 rounded pt-5 block_information_home border-circle">
 							<h1 class="display-2 text-center text-white"><strong>Agence web dans l'Yonne</strong></h1>
 							<p class="mb-4 text-justify text-white px-5">
 								Grâce à notre expertise en développement Web, on vous accompagne dans
@@ -27,8 +27,8 @@
 							</p>
 						</div>
 					</div>
-					<div class="col-lg-7 dotted-bg man_mobile" style="position: absolute;bottom:0;right: 0;">
-						<img src="{{ asset('img/man.png') }}" alt="Client" class="d-flex align-self-end mt-5 z-1 mx-auto w-75 position-relative">
+					<div class="col-lg-7 dotted-bg man_mobile" style="position: absolute;bottom: 0;right: 0;">
+						<img src="{{ asset('img/man.png') }}" alt="Client" class="d-flex align-self-end mt-5 z-1 mx-auto w-75">
 					</div>
 				</div>
 			</div>
@@ -50,7 +50,59 @@
 		</div>
 		{# End of Hero section #}
 
-		<h1 class="display-4 fw-bold text-center">Processus</h1>
+	<!-- À propos 2 - Composant cérébral Bootstrap -->
+	<section class="py-3 py-md-5">
+		<div class="container">
+			<div class="row gy-3 gy-md-4 gy-lg-0 align-items-lg-center">
+				<div class="col-12 col-lg-6">
+					<img class="img-fluid rounded" loading="lazy" src="{{ asset('img/about.jpg') }}" alt="À propos 2">
+				</div>
+				<div class="col-12 col-lg-6">
+					<div class="row justify-content-xl-center">
+						<div class="col-12 col-xl-10">
+							<h2 class="mb-3">Pourquoi nous choisir ?</h2>
+							<p class="lead">Fondée en 2023, ScriptzenIT fait son entrée dans le domaine numérique en redéfinissant les frontières de l'innovation et de l'excellence. Portée par une vision avant-gardiste, notre entreprise s'engage à remodeler le monde numérique. </p>
+							<p class="lead">Notre approche est centrée sur nos clients, et nous collaborons avec des entreprises de toutes tailles et de tous secteurs pour concevoir des stratégies sur mesure qui répondent précisément à leurs besoins et objectifs spécifiques.</p>
+							<div class="d-flex align-items-center mb-3">
+								<div class="me-3 text-primary">
+									<svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-check-circle-fill" viewBox="0 0 16 16">
+										<path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z" />
+									</svg>
+								</div>
+								<div>
+									<p class="fs-5 m-0">Notre procédure d'évolution est super intelligente.</p>
+								</div>
+							</div>
+							<div class="d-flex align-items-center mb-3">
+								<div class="me-3 text-primary">
+									<svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-check-circle-fill" viewBox="0 0 16 16">
+										<path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z" />
+									</svg>
+								</div>
+								<div>
+									<p class="fs-5 m-0">Nous offrons des services au-delà des attentes.</p>
+								</div>
+							</div>
+							<div class="d-flex align-items-center mb-4 mb-xl-5">
+								<div class="me-3 text-primary">
+									<svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-check-circle-fill" viewBox="0 0 16 16">
+										<path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z" />
+									</svg>
+								</div>
+								<div>
+									<p class="fs-5 m-0">Engagez-nous pour atteindre vos objectifs.</p>
+								</div>
+							</div>
+							<a href="{{ url('app_login') }}" class="btn bsb-btn-xl btn-outline-primary rounded-pill">Connectez-vous maintenant</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+
+	<h1 class="display-4 fw-bold text-center">Processus</h1>
 
 		{# Services de l'Agence #}
 		<section>
@@ -89,9 +141,105 @@
 		</section>
 		{# ./ Services de l'Agence #}
 
-		<section class="my-5">
+		<section class="section services-section" id="services">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-6">
+						<div class="section-title">
+							<h2>Nos Services</h2>
+							<p>Nous sommes des experts en conception et développement web, offrant des solutions sur mesure pour les professionnels et les artisans.</p>
+							<p>ScriptzenIT est prête à laisser une empreinte indélébile dans le domaine numérique en proposant des solutions inégalées et en réimaginant l'avenir de la technologie.</p>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<!-- Boîte de fonctionnalités -->
+					<div class="col-sm-6 col-lg-4">
+						<div class="feature-box-1">
+							<div class="icon">
+								<i class="fa fa-desktop"></i>
+							</div>
+							<div class="feature-content">
+								<h5>Design Unique</h5>
+								<p>Nous créons des designs uniques qui reflètent la personnalité de votre entreprise, vous démarquant de la concurrence.</p>
+							</div>
+						</div>
+					</div>
+					<!-- / -->
+					<!-- Boîte de fonctionnalités -->
+					<div class="col-sm-6 col-lg-4">
+						<div class="feature-box-1">
+							<div class="icon">
+								<i class="fa fa-user"></i>
+							</div>
+							<div class="feature-content">
+								<h5>Disposition Différente</h5>
+								<p>Nous proposons des mises en page personnalisées pour répondre à vos besoins spécifiques, garantissant une expérience utilisateur optimale.</p>
+							</div>
+						</div>
+					</div>
+					<!-- / -->
+					<!-- Boîte de fonctionnalités -->
+					<div class="col-sm-6 col-lg-4">
+						<div class="feature-box-1">
+							<div class="icon">
+								<i class="fa fa-comment"></i>
+							</div>
+							<div class="feature-content">
+								<h5>Simplicité</h5>
+								<p>Nous simplifions votre présence en ligne, offrant des solutions intuitives qui facilitent l'interaction avec vos clients.</p>
+							</div>
+						</div>
+					</div>
+					<!-- / -->
+					<!-- Boîte de fonctionnalités -->
+					<div class="col-sm-6 col-lg-4">
+						<div class="feature-box-1">
+							<div class="icon">
+								<i class="fa fa-image"></i>
+							</div>
+							<div class="feature-content">
+								<h5>Réactivité</h5>
+								<p>Nos sites sont entièrement réactifs, assurant une expérience cohérente sur tous les appareils, ce qui est essentiel pour atteindre votre public cible.</p>
+							</div>
+						</div>
+					</div>
+					<!-- / -->
+					<!-- Boîte de fonctionnalités -->
+					<div class="col-sm-6 col-lg-4">
+						<div class="feature-box-1">
+							<div class="icon">
+								<i class="fa fa-th"></i>
+							</div>
+							<div class="feature-content">
+								<h5>Test pour la Perfection</h5>
+								<p>Nous effectuons des tests rigoureux pour garantir la perfection, assurant un fonctionnement sans faille de votre site et une expérience utilisateur optimale.</p>
+							</div>
+						</div>
+					</div>
+					<!-- / -->
+					<!-- Boîte de fonctionnalités -->
+					<div class="col-sm-6 col-lg-4">
+						<div class="feature-box-1">
+							<div class="icon">
+								<i class="fa fa-cog"></i>
+							</div>
+							<div class="feature-content">
+								<h5>Options Avancées</h5>
+								<p>Nous offrons des options avancées pour répondre à vos besoins spécifiques, vous permettant de tirer le meilleur parti de votre présence en ligne.</p>
+							</div>
+						</div>
+					</div>
+					<!-- / -->
+				</div>
+			</div>
+		</section>
+
+	{# Section Project  #}
+
+		<section>
 			<div class="container-fluid">
-				<div class="row gx-5 align-items-center bg-black justify-content-center px-5 pt-5 text-white 100-vh">
+				<div class="row align-items-center bg-black justify-content-center px-5 text-white 100-vh">
 					<div class="col-md-4">
 						<h1>BESOIN D'ÉCLAIRAGE ?</h1>
 						<p class="text-white">Transformez les défis techniques en opportunités. Lorsque vous êtes confronté à des problèmes techniques, vous faites face à des occasions de grandir et d'apprendre.</p>
@@ -233,7 +381,7 @@
 
 			<div class="text-white bg-tertiary text-center pt-5 pb-5" id="agence">
 				<h1 class="display-5 fw-bold lh-1 mb-3 text-center">Soyez Zen, On s'occupe de tout !</h1>
-				<p class="fw-bold mb-3 text-center lead text-white">Transitionnez de la planification au site grâce à ScriptZenIT, le créateur de sites Web destiné aux professionnels et aux artisans.</p>
+				<p class="fw-bold mb-3 text-center lead text-white px-5">Transitionnez de la planification au site grâce à ScriptZenIT, le créateur de sites Web destiné aux professionnels et aux artisans.</p>
 				<div class="ask">
 					<a href="{{ url('front_devis_new') }}" class="btn btn-black mr-3 animate-up-2 inline-block text-white">Démarrer ma demande
 						<span class="ml-2">
